Move sign up request model
